Added comments for explanations

--- a/main.ipynb
+++ b/main.ipynb
@@ -120,6 +120,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementing the DataLoaders"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -359,7 +367,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training the Discriminator"
+    "### Training the Discriminator\n",
+    "\n",
+    "- We will implement the training step for the discriminator for one batch.\n",
+    "- This aims to minimize the function:\n",
+    "$$log(D(x)) + log(1 - D(G(z))$$"
    ]
   },
   {
@@ -380,7 +392,7 @@
    "outputs": [],
    "source": [
     "def get_accuracy_binary(outputs, target_class):\n",
-    "  \"\"\"Returns num_correct\"\"\"\n",
+    "  \"\"\"Returns num_correct in a batch of outputs (according to the `target_class`)\"\"\"\n",
     "  len_outputs = outputs.size(0)\n",
     "  num_correct = (torch.round(outputs) == target_class).sum()\n",
     "  return num_correct.item()\n"
@@ -456,7 +468,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training the Generator"
+    "### Training the Generator\n",
+    "\n",
+    "- We will implement the training step for the generator for one minibatch.\n",
+    "- This will maximize the function:\n",
+    "$$log(1 - D(G(z)))$$\n",
+    "\n",
+    "- As we can see, the generator can only aim to improve what the generator produces, can't influence what the discriminator predicts on the real training examples."
    ]
   },
   {
